@@ -11,3 +11,36 @@
 
   - name: STR_NOT_AVAILABLE
     needItem: true
+
+  - name: STR_PERSONAL_SHIELD_GENERATOR
+    dependencies:
+      - STR_PERSONAL_SHIELD_GENERATOR_PREREQUISITE
+      - STR_GLOBAL_SMUGGLER_CONTACTS
+
+  - name: STR_PERSONAL_SHIELD_GENERATOR_PREREQUISITE
+    dependencies:
+      - STR_ATREIDES_OFFICER
+      - STR_HARKONNEN_LEADER
+      - STR_HARKONNEN_MENTAT
+      - STR_SARDAUKAR_OFFICER
+      - STR_GUILD_NAVIGATOR
+
+  - name: STR_ATREIDES_OFFICER
+    unlocks:
+      - STR_PERSONAL_SHIELD_GENERATOR_PREREQUISITE
+
+  - name: STR_HARKONNEN_LEADER
+    unlocks:
+      - STR_PERSONAL_SHIELD_GENERATOR_PREREQUISITE
+
+  - name: STR_HARKONNEN_MENTAT
+    unlocks:
+      - STR_PERSONAL_SHIELD_GENERATOR_PREREQUISITE
+
+  - name: STR_SARDAUKAR_OFFICER
+    unlocks:
+      - STR_PERSONAL_SHIELD_GENERATOR_PREREQUISITE
+
+  - name: STR_GUILD_NAVIGATOR
+    unlocks:
+      - STR_PERSONAL_SHIELD_GENERATOR_PREREQUISITE
